@@ -1,3 +1,9 @@
+2001-03-13  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* backends/xml-entry.c: Merge from branch. Use xmlFree().
+	* gconf/gconftool.c: Merge from branch. Use xmlFree() and
+	don't free until after referencing stuff.
+	
 2001-03-12  Timur Bakeyev  <timur@gnu.org>
 
 	* Makefile.am: Made warning printing a bit nicer.
